Fix height mismatch in input elements
In full(or large width) screen, font size of input-group-addon is
too higher than input element(form-control.input-lg) because font
size is 2vw in inner of the .large class elements.

--- a/main.css
+++ b/main.css
@@ -32,6 +32,11 @@
     font-size: 2vw;
 }
 
+.large > .input-group-addon {
+  padding-top: 3px;
+  padding-bottom: 3px;
+}
+
 .relative {
     position: relative;
 }
